# fluent-bit

./: .gitignore  CMakeLists.txt
.github/workflows/: build-legacy-branch.yaml  call-build-images.yaml  call-build-windows.yaml  call-integration-image-build.yaml  pr-compile-check.yaml  pr-image-tests.yaml  staging-release.yaml  unit-tests.yaml
cmake/: FindBpfObject.cmake  FindLibElf.cmake  FindZlib.cmake  libbpf.cmake  libraries.cmake  luajit.cmake  ppc64le.cmake  windows-setup.cmake
cpack/wix/: WIX.template.in
dockerfiles/: Dockerfile.centos7
examples/filter_rust_clib/: README.md
examples/filter_rust_msgpack/: Cargo.toml
examples/filter_rust_msgpack/src/: lib.rs
examples/filter_wasm_go/: README.md
include/fluent-bit/: flb_api.h  flb_compat.h  flb_config.h  flb_engine.h  flb_engine_macros.h  flb_filter.h  flb_input.h  flb_intermediate_metric.h  flb_output.h  flb_plugin_proxy.h  flb_processor.h  flb_reload.h  flb_utils.h
lib/onigmo-cmake/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/filter_ebpf/: CMakeLists.txt  ebpf.c  ebpf.h  minimal.bpf.c
plugins/filter_wasm/: filter_wasm.c  filter_wasm.h
plugins/in_ebpf/: CMakeLists.txt  ebpf.c  ebpf.h  oom_victim.bpf.c  shm.bpf.c  shm.h  tcpconnect.bpf.c  tcpconnect.h  vfsstat.bpf.c  vfsstat.h
plugins/in_elasticsearch/: in_elasticsearch_config.c
plugins/in_event_test/: event_test.c
plugins/in_exec_wasi/: in_exec_wasi.c  in_exec_wasi.h
plugins/in_forward/: fw.c
plugins/in_lib/: in_lib.h
plugins/in_local_file_exporter_metrics/: CMakeLists.txt  lf.c  lf.h  lf_config.c  lf_config.h  lf_textfile.c  lf_textfile.h  lf_textfile_linux.c  lf_utils.c  lf_utils.h
plugins/out_opentelemetry/libopentelemetry_proto/: CMakeLists.txt  opentelemetry_common.pb-c.c  opentelemetry_common.pb-c.h
src/: CMakeLists.txt  flb_api.c  flb_config.c  flb_coro.c  flb_custom.c  flb_engine.c  flb_filter.c  flb_input.c  flb_input_chunk.c  flb_input_thread.c  flb_io.c  flb_lib.c  flb_network.c  flb_output.c  flb_parser.c  flb_plugin_proxy.c  flb_processor.c  flb_reload.c  flb_storage.c  flb_upstream.c  flb_utils.c  fluent-bit.c
(+79 files in other folders)
