[package]
name = "filter_rust_rmp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "*", features = ["derive", "std"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
rmp-serde = "1.1"
rmpv = "1.0"
rmp = "0.8"
chrono = "0.4"
libc = "0.2"
